push Evening, Merge, mean and Target/Features

--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -976,13 +976,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "E_zalIbpOmvI"
+    "id": "E_zalIbpOmvI",
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price_mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>listing_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5396</th>\n",
+       "      <td>102.363985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7397</th>\n",
+       "      <td>110.107632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9342</th>\n",
+       "      <td>396.863014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10010</th>\n",
+       "      <td>136.154856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10270</th>\n",
+       "      <td>105.779221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            price_mean\n",
+       "listing_id            \n",
+       "5396        102.363985\n",
+       "7397        110.107632\n",
+       "9342        396.863014\n",
+       "10010       136.154856\n",
+       "10270       105.779221"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#construire l'ensemble de donnée prix \n",
     "#\n",
@@ -990,7 +1059,227 @@
     "# \n",
     "# récupérer les prix des ID dans le dataset de prix \n",
     "# 🚧 il y a plusieurs prix dans le dataset 🚧\n",
-    "\n"
+    "\n",
+    "priceList = dataPrice.groupby('listing_id')['local_price'].agg([np.mean])\n",
+    "priceList.rename(columns={\"mean\": \"price_mean\"}, inplace = True)\n",
+    "priceList.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong> Merging Listings with Mean_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>city</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>person_capacity</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>is_rebookable</th>\n",
+       "      <th>is_new_listing</th>\n",
+       "      <th>is_fully_refundable</th>\n",
+       "      <th>is_host_highly_rated</th>\n",
+       "      <th>is_business_travel_ready</th>\n",
+       "      <th>pricing_weekly_factor</th>\n",
+       "      <th>pricing_monthly_factor</th>\n",
+       "      <th>price_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28581061</td>\n",
+       "      <td>La maison Clery</td>\n",
+       "      <td>private_room</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>2e arrondissement</td>\n",
+       "      <td>48.869292</td>\n",
+       "      <td>2.348335</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>45.948454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>661961</td>\n",
+       "      <td>studio PARIS PLACE EDITH PIAF 75020</td>\n",
+       "      <td>entire_home</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>48.867284</td>\n",
+       "      <td>2.403255</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>44.473684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1261705</td>\n",
+       "      <td>chambre privée à louer @ paris oberkampf</td>\n",
+       "      <td>private_room</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>48.867894</td>\n",
+       "      <td>2.375897</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>49.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1318834</td>\n",
+       "      <td>Appartement au coeur du Marais</td>\n",
+       "      <td>entire_home</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>République</td>\n",
+       "      <td>48.870370</td>\n",
+       "      <td>2.358510</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>165.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1677091</td>\n",
+       "      <td>Lovely &amp; Quiet flat</td>\n",
+       "      <td>entire_home</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Buttes-Chaumont - Belleville</td>\n",
+       "      <td>48.874149</td>\n",
+       "      <td>2.373700</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>69.774436</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   listing_id                                      name          type   city  \\\n",
+       "0    28581061                           La maison Clery  private_room  Paris   \n",
+       "1      661961       studio PARIS PLACE EDITH PIAF 75020   entire_home  Paris   \n",
+       "2     1261705  chambre privée à louer @ paris oberkampf  private_room  Paris   \n",
+       "3     1318834            Appartement au coeur du Marais   entire_home  Paris   \n",
+       "4     1677091                       Lovely & Quiet flat   entire_home  Paris   \n",
+       "\n",
+       "                   neighborhood   latitude  longitude  person_capacity  beds  \\\n",
+       "0             2e arrondissement  48.869292   2.348335                1     1   \n",
+       "1                           NaN  48.867284   2.403255                2     1   \n",
+       "2                           NaN  48.867894   2.375897                1     1   \n",
+       "3                    République  48.870370   2.358510                3     2   \n",
+       "4  Buttes-Chaumont - Belleville  48.874149   2.373700                2     1   \n",
+       "\n",
+       "   bedrooms  bathrooms  is_rebookable  is_new_listing  is_fully_refundable  \\\n",
+       "0         1        2.0          False            True                 True   \n",
+       "1         1        1.0          False           False                 True   \n",
+       "2         1        1.0          False           False                 True   \n",
+       "3         2        1.0          False           False                 True   \n",
+       "4         1        1.0          False           False                 True   \n",
+       "\n",
+       "   is_host_highly_rated  is_business_travel_ready  pricing_weekly_factor  \\\n",
+       "0                 False                     False                   1.00   \n",
+       "1                  True                     False                   0.88   \n",
+       "2                  True                     False                   1.00   \n",
+       "3                 False                     False                   0.82   \n",
+       "4                  True                     False                   0.95   \n",
+       "\n",
+       "   pricing_monthly_factor  price_mean  \n",
+       "0                    1.00   45.948454  \n",
+       "1                    0.69   44.473684  \n",
+       "2                    1.00   49.000000  \n",
+       "3                    0.48  165.000000  \n",
+       "4                    0.90   69.774436  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataMerging = dataListing.merge(priceList, on = 'listing_id', how = 'left')\n",
+    "\n",
+    "dataMerging.head()"
    ]
   },
   {
