--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -84,6 +84,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] IMPORT LIB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -98,7 +105,14 @@
     "import math \n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import sklearn.datasets"
+    "import sklearn as sk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] IMPORT CSV + DATA CLEANING"
    ]
   },
   {
@@ -125,6 +139,13 @@
     "\n",
     "# Enlever la colonne inutile bugué de Listing_Final\n",
     "dataListing.drop(['Unnamed: 0'], axis='columns', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] HEAD CSV"
    ]
   },
   {
@@ -449,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] TAIL CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -768,6 +796,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] SHAPE CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -784,6 +819,13 @@
    "source": [
     "print(dataPrice.shape)\n",
     "print(dataListing.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] TYPES CSV"
    ]
   },
   {
@@ -830,6 +872,13 @@
     "print(dataPrice.dtypes)\n",
     "print('...')\n",
     "print(dataListing.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] CHECK NaN CSV"
    ]
   },
   {
@@ -918,70 +967,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "tnTd7XKdOmu5"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        listing_id  local_price\n",
-      "142103        5396          103\n",
-      "6307          7397           95\n",
-      "31081         9342          390\n",
-      "14680        10010          135\n",
-      "158          10270          105\n",
-      "...            ...          ...\n",
-      "1054      28836096          380\n",
-      "71458     28838519           51\n",
-      "13988     28840013          112\n",
-      "20556     28846494          180\n",
-      "4551      28851976          128\n",
-      "\n",
-      "[11749 rows x 2 columns]\n",
-      "     listing_id          type   city                    neighborhood\n",
-      "0      28581061  private_room  Paris               2e arrondissement\n",
-      "1        661961   entire_home  Paris                             NaN\n",
-      "2       1261705  private_room  Paris                             NaN\n",
-      "3       1318834   entire_home  Paris                      République\n",
-      "4       1677091   entire_home  Paris    Buttes-Chaumont - Belleville\n",
-      "..          ...           ...    ...                             ...\n",
-      "995    28335197   entire_home  Paris  Saint Germain des Prés - Odéon\n",
-      "996    28583013   entire_home  Paris                      République\n",
-      "997    28628316   entire_home  Paris               2e arrondissement\n",
-      "998    28792796   entire_home  Paris             Madeleine - Vendôme\n",
-      "999    28682896  private_room  Paris    Buttes-Chaumont - Belleville\n",
-      "\n",
-      "[1000 rows x 4 columns]\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#définir 2 variables de travail\n",
-    "#X := les features à utiliser \n",
-    "#Y := la target (prix)\n",
-    "\n",
-    "#Créer Y et X\n",
-    "Y = dataPrice[['listing_id', 'local_price']].drop_duplicates(subset='listing_id').sort_values('listing_id')\n",
-    "X = dataListing[['listing_id', 'type', 'city', 'neighborhood']].drop_duplicates(subset='listing_id')\n",
-    "\n",
-    "print(Y)\n",
-    "print(X)"
+    "<strong><p style=\"font-size: 150%\"> [✓] CREATE USABLE VARIABLE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "E_zalIbpOmvI",
-    "scrolled": true
+    "id": "tnTd7XKdOmu5"
    },
    "outputs": [
     {
@@ -1005,53 +1003,95 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price_mean</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>listing_id</th>\n",
-       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>city</th>\n",
+       "      <th>neighborhood</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5396</th>\n",
-       "      <td>102.363985</td>\n",
+       "      <th>0</th>\n",
+       "      <td>28581061</td>\n",
+       "      <td>private_room</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>2e arrondissement</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7397</th>\n",
-       "      <td>110.107632</td>\n",
+       "      <th>1</th>\n",
+       "      <td>661961</td>\n",
+       "      <td>entire_home</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9342</th>\n",
-       "      <td>396.863014</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1261705</td>\n",
+       "      <td>private_room</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10010</th>\n",
-       "      <td>136.154856</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1318834</td>\n",
+       "      <td>entire_home</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>République</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10270</th>\n",
-       "      <td>105.779221</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1677091</td>\n",
+       "      <td>entire_home</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Buttes-Chaumont - Belleville</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            price_mean\n",
-       "listing_id            \n",
-       "5396        102.363985\n",
-       "7397        110.107632\n",
-       "9342        396.863014\n",
-       "10010       136.154856\n",
-       "10270       105.779221"
+       "   listing_id          type   city                  neighborhood\n",
+       "0    28581061  private_room  Paris             2e arrondissement\n",
+       "1      661961   entire_home  Paris                           NaN\n",
+       "2     1261705  private_room  Paris                           NaN\n",
+       "3     1318834   entire_home  Paris                    République\n",
+       "4     1677091   entire_home  Paris  Buttes-Chaumont - Belleville"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "#définir 2 variables de travail\n",
+    "#X := les features à utiliser \n",
+    "#Y := la target (prix)\n",
+    "\n",
+    "#Créer Y et X\n",
+    "Y = dataPrice[['listing_id', 'local_price']].drop_duplicates(subset='listing_id').sort_values('listing_id')\n",
+    "X = dataListing[['listing_id', 'type', 'city', 'neighborhood']].drop_duplicates(subset='listing_id')\n",
+    "\n",
+    "Y.head()\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong><p style=\"font-size: 150%\"> [✓] CREATE MEAN BY LISTING_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "E_zalIbpOmvI"
+   },
+   "outputs": [],
    "source": [
     "#construire l'ensemble de donnée prix \n",
     "#\n",
@@ -1069,7 +1109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong> Merging Listings with Mean_price"
+    "<strong><p style=\"font-size: 150%\"> [✓] MERGING WITH LISTING"
    ]
   },
   {
@@ -1299,30 +1339,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "G-x-APn4OmvX",
     "outputId": "ff55319f-f6d2-477c-811e-f1eb2d5ef7b8"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((699, 4), (699,), (300, 4), (300,))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#utiliser la méthode split de sklearn en splitant avec un alpha=30 et un random state=42 \n",
-    "#zafficher la shape de vos données \n"
+    "#zafficher la shape de vos données \n",
+    "# TRAINING AND TESTING DATA "
    ]
   },
   {
