--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -983,84 +983,12 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>listing_id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>city</th>\n",
-       "      <th>neighborhood</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>28581061</td>\n",
-       "      <td>private_room</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>2e arrondissement</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>661961</td>\n",
-       "      <td>entire_home</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1261705</td>\n",
-       "      <td>private_room</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1318834</td>\n",
-       "      <td>entire_home</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>République</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1677091</td>\n",
-       "      <td>entire_home</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>Buttes-Chaumont - Belleville</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   listing_id          type   city                  neighborhood\n",
-       "0    28581061  private_room  Paris             2e arrondissement\n",
-       "1      661961   entire_home  Paris                           NaN\n",
-       "2     1261705  private_room  Paris                           NaN\n",
-       "3     1318834   entire_home  Paris                    République\n",
-       "4     1677091   entire_home  Paris  Buttes-Chaumont - Belleville"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-49-c3e9f070310f>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-c3e9f070310f>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    <!> <!>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -1069,11 +997,14 @@
     "#Y := la target (prix)\n",
     "\n",
     "#Créer Y et X\n",
-    "Y = dataPrice[['listing_id', 'local_price']].drop_duplicates(subset='listing_id').sort_values('listing_id')\n",
-    "X = dataListing[['listing_id', 'type', 'city', 'neighborhood']].drop_duplicates(subset='listing_id')\n",
+    "## Y = dataPrice[['listing_id', 'local_price']].drop_duplicates(subset='listing_id').sort_values('listing_id')\n",
+    "## X = dataListing[['listing_id', 'type', 'city', 'neighborhood']].drop_duplicates(subset='listing_id')\n",
     "\n",
-    "Y.head()\n",
-    "X.head()"
+    "## Y.head()\n",
+    "## X.head()\n",
+    "\n",
+    "\n",
+    "# <!> US<!>"
    ]
   },
   {
