--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -975,13 +975,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "E_zalIbpOmvI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price_mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>listing_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5396</th>\n",
+       "      <td>102.363985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7397</th>\n",
+       "      <td>110.107632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9342</th>\n",
+       "      <td>396.863014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10010</th>\n",
+       "      <td>136.154856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10270</th>\n",
+       "      <td>105.779221</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            price_mean\n",
+       "listing_id            \n",
+       "5396        102.363985\n",
+       "7397        110.107632\n",
+       "9342        396.863014\n",
+       "10010       136.154856\n",
+       "10270       105.779221"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#construire l'ensemble de donnée prix \n",
     "#\n",
@@ -1004,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "metadata": {
     "scrolled": true
    },
@@ -1203,15 +1271,34 @@
        "4                    0.90   69.774436  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataMerging = dataListing.merge(priceList, on = 'listing_id', how = 'left')\n",
-    "\n",
     "dataMerging.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19000"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataMerging.size"
    ]
   },
   {
@@ -1223,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,8 +1319,8 @@
     "#Y := la target (prix)\n",
     "\n",
     "#Créer Y et X\n",
-    "\n",
-    "X = dataMerging[['latitude', 'longitude', 'person_capacity']]\n",
+    "dataMerging.dropna(subset = ['price_mean'], inplace = True)\n",
+    "X = dataMerging[['latitude', 'longitude', 'person_capacity']].dropna()\n",
     "Y = dataMerging[['price_mean']]"
    ]
   },
@@ -1254,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 119,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1273,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 120,
    "metadata": {
     "scrolled": true
    },
@@ -1306,34 +1393,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>48.867351</td>\n",
-       "      <td>2.370564</td>\n",
-       "      <td>2</td>\n",
+       "      <th>358</th>\n",
+       "      <td>48.864815</td>\n",
+       "      <td>2.343331</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>751</th>\n",
-       "      <td>48.872571</td>\n",
-       "      <td>2.328301</td>\n",
-       "      <td>2</td>\n",
+       "      <th>757</th>\n",
+       "      <td>48.864835</td>\n",
+       "      <td>2.357728</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>48.867171</td>\n",
-       "      <td>2.378587</td>\n",
-       "      <td>2</td>\n",
+       "      <th>585</th>\n",
+       "      <td>48.855974</td>\n",
+       "      <td>2.308832</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>48.852359</td>\n",
-       "      <td>2.286330</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>713</th>\n",
-       "      <td>48.871697</td>\n",
-       "      <td>2.373189</td>\n",
+       "      <th>814</th>\n",
+       "      <td>48.873648</td>\n",
+       "      <td>2.382230</td>\n",
        "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>48.871307</td>\n",
+       "      <td>2.311296</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1341,14 +1428,14 @@
       ],
       "text/plain": [
        "      latitude  longitude  person_capacity\n",
-       "443  48.867351   2.370564                2\n",
-       "751  48.872571   2.328301                2\n",
-       "195  48.867171   2.378587                2\n",
-       "209  48.852359   2.286330                2\n",
-       "713  48.871697   2.373189                4"
+       "358  48.864815   2.343331                3\n",
+       "757  48.864835   2.357728                6\n",
+       "585  48.855974   2.308832                3\n",
+       "814  48.873648   2.382230                4\n",
+       "335  48.871307   2.311296                2"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1388,24 +1475,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>79.976684</td>\n",
+       "      <th>358</th>\n",
+       "      <td>89.007732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>751</th>\n",
-       "      <td>83.345631</td>\n",
+       "      <th>757</th>\n",
+       "      <td>154.979275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>51.728205</td>\n",
+       "      <th>585</th>\n",
+       "      <td>230.015748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>95.453333</td>\n",
+       "      <th>814</th>\n",
+       "      <td>931.655352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>713</th>\n",
-       "      <td>111.864583</td>\n",
+       "      <th>335</th>\n",
+       "      <td>114.904215</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1413,14 +1500,14 @@
       ],
       "text/plain": [
        "     price_mean\n",
-       "443   79.976684\n",
-       "751   83.345631\n",
-       "195   51.728205\n",
-       "209   95.453333\n",
-       "713  111.864583"
+       "358   89.007732\n",
+       "757  154.979275\n",
+       "585  230.015748\n",
+       "814  931.655352\n",
+       "335  114.904215"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 123,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1467,26 +1554,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float64').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-904c9c9a2449>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    504\u001b[0m         \u001b[0mn_jobs_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 505\u001b[0;31m         X, y = self._validate_data(X, y, accept_sparse=['csr', 'csc', 'coo'],\n\u001b[0m\u001b[1;32m    506\u001b[0m                                    y_numeric=True, multi_output=True)\n\u001b[1;32m    507\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    430\u001b[0m                 \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcheck_y_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    431\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 432\u001b[0;31m                 \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcheck_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    433\u001b[0m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    434\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     70\u001b[0m                           FutureWarning)\n\u001b[1;32m     71\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[1;32m    802\u001b[0m                     estimator=estimator)\n\u001b[1;32m    803\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 804\u001b[0;31m         y = check_array(y, accept_sparse='csr', force_all_finite=True,\n\u001b[0m\u001b[1;32m    805\u001b[0m                         ensure_2d=False, dtype=None)\n\u001b[1;32m    806\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     70\u001b[0m                           FutureWarning)\n\u001b[1;32m     71\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[1;32m    642\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    643\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 644\u001b[0;31m             _assert_all_finite(array,\n\u001b[0m\u001b[1;32m    645\u001b[0m                                allow_nan=force_all_finite == 'allow-nan')\n\u001b[1;32m    646\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X, allow_nan, msg_dtype)\u001b[0m\n\u001b[1;32m     94\u001b[0m                 not allow_nan and not np.isfinite(X).all()):\n\u001b[1;32m     95\u001b[0m             \u001b[0mtype_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'infinity'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mallow_nan\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'NaN, infinity'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m             raise ValueError(\n\u001b[0m\u001b[1;32m     97\u001b[0m                     \u001b[0mmsg_err\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m                     (type_err,\n",
-      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float64')."
-     ]
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
