--- a/MachineLearning/Modele_Lineaire_exo.ipynb
+++ b/MachineLearning/Modele_Lineaire_exo.ipynb
@@ -1402,8 +1402,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://i.ibb.co/1MCQfk4/20201023-115353.jpg) "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,6 +1421,8 @@
     "#Créer Y et X\n",
     "dataMerging.dropna(subset = ['price_mean'], inplace = True)\n",
     "X = dataMerging[['latitude', 'longitude', 'person_capacity']]\n",
+    "## SOLUTION ? : Nb_Personne, Nb_Salle_Bain, Nb_Chambre, Nb_Lit\n",
+    "# 4 paramètre -> 4 Beta -> 4 Coef\n",
     "Y = dataMerging[['price_mean']]"
    ]
   },
