--- a/MachineLearning/MiniProject/MiniProjet.ipynb
+++ b/MachineLearning/MiniProject/MiniProjet.ipynb
@@ -229,6 +229,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong>Description des variables </strong><br>\n",
+    "\n",
+    "<br>\n",
+    "<strong>App : </strong>Nom de l'application\n",
+    "<br>\n",
+    "<strong>Rating : </strong>La note de l'application\n",
+    "<br>\n",
+    "<strong>Reviews : </strong>Nombre de revue de l'application\n",
+    "<br>\n",
+    "<strong>Size : </strong>Taille de l'application\n",
+    "<br>\n",
+    "<strong>Installs : </strong>Nombre d'installation de l'application\n",
+    "<br>\n",
+    "<strong>Content Rating : </strong>Note de maturité de l'application\n",
+    "<br>\n",
+    "<strong>Last Updated : </strong>Dernière update\n",
+    "<br>\n",
+    "<strong>Current Ver : </strong>Version actuelle de l'application\n",
+    "<br>\n",
+    "<strong>Android Ver :</strong>Version android utilisé pour l'application\n",
+    "<br>\n",
+    "<strong>Category : </strong>La catégorie\n",
+    "<br>\n",
+    "<strong>Type : </strong>Payant ou non\n",
+    "<br>\n",
+    "<strong>Genre : </strong>Le genre du jeu\n",
+    "<br>\n",
+    "<strong>Last Updated : </strong>Dernière update catégorique\n",
+    "<br>\n",
+    "<strong>No_reviews_count : </strong>Nombre de revue non compté\n",
+    "<br>\n",
+    "<strong>Reviews_present_count : </strong>Nombre de revue compté"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong> Modification de la date en DateTime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
@@ -1570,6 +1615,13 @@
    "metadata": {},
    "source": [
     "# Feature importante"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Affichage sous forme de Barplot"
    ]
   },
   {
