:up: Added BarPlot

--- a/MachineLearning/MiniProject/MiniProjet.ipynb
+++ b/MachineLearning/MiniProject/MiniProjet.ipynb
@@ -1835,7 +1835,9 @@
   {
    "cell_type": "code",
    "execution_count": 332,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1853,6 +1855,27 @@
    "source": [
     "ax = df.plot.bar(stacked = True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problématique de départ, résolu ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
