:up: Finished PDF

--- a/MachineLearning/MiniProject/MiniProjet.ipynb
+++ b/MachineLearning/MiniProject/MiniProjet.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong> Modification de la date en DateTime"
+    "### Modification de la date en DateTime"
    ]
   },
   {
@@ -282,6 +282,13 @@
     "dataStore['Last Updated'] = pd.to_datetime(dataStore['Last Updated'])\n",
     "\n",
     "dataStore['Last Updated (Year/Month) (categorical)'] = pd.to_datetime(dataStore['Last Updated (Year/Month) (categorical)'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Affichage des Types et de la Shape"
    ]
   },
   {
@@ -518,6 +525,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Supression des lignes comprennant des NULL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {},
@@ -628,7 +642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peux voir que la moyenne des notes ce situent surtout entre 4.0 et 4.5"
+    "<strong> On peux voir que la moyenne des notes ce situent surtout entre 4.0 et 4.5"
    ]
   },
   {
@@ -819,13 +833,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Des valeurs apparaissent en dehors des moyennes et sont extrème vers 1, souvent lié aux applications de faible facture ou de Bashage voulu par une grande communauté"
+    "<strong> Des valeurs apparaissent en dehors des moyennes et sont extrème vers 1, souvent lié aux applications de faible facture ou de Bashage voulu par une grande communauté"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 205,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -851,7 +867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ici l'on peux voir aussi que des extrèmes sont identifiable comme des jeux massivements téléchargé par énormément de personne ou alors des applications indispensable pour un téléphone.\n",
+    "<strong> Ici l'on peux voir aussi que des extrèmes sont identifiable comme des jeux massivements téléchargé par énormément de personne ou alors des applications indispensable pour un téléphone.\n",
     "On va devoir retirer les deux valeures aberrante"
    ]
   },
@@ -970,7 +986,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On obtiens désormais une boite a moustache bien plus clean"
+    "<strong>on obtiens désormais une boite a moustache bien plus clean"
    ]
   },
   {
@@ -978,6 +994,13 @@
    "metadata": {},
    "source": [
     "## HeatMap Correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Affichage d'une HeatMap de corrélation"
    ]
   },
   {
@@ -1090,7 +1113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Avec cette HeatMap, l'on peux potentiellement prendre en compte que la note d'un jeu ou application sur le store ne dépend vraiment du nombre d'installation et potentiellement des reviews"
+    "<strong> Avec cette HeatMap, l'on peux potentiellement prendre en compte que la note d'un jeu ou application sur le store ne dépend vraiment du nombre d'installation et potentiellement des reviews"
    ]
   },
   {
@@ -1104,7 +1127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Je ne peux pas créer de ChartPie pour les valeurs utilisé dans mon tableau qui sont des extrèmes l'un a l'autres. Je n'ai eu non plus eu besoin de regrouper plusieurs valeurs dans une catégorie."
+    "<strong> Je ne peux pas créer de ChartPie pour les valeurs utilisé dans mon tableau qui sont des extrèmes l'un a l'autres. Je n'ai eu non plus eu besoin de regrouper plusieurs valeurs dans une catégorie."
    ]
   },
   {
@@ -1118,7 +1141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creation de X et Y pour un nuage de point."
+    "### Creation de X et Y pour un nuage de point."
    ]
   },
   {
@@ -1175,14 +1198,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peux observer au final une très faible corrélation entre le nombre de téléchargement d'un logiciel et sa note."
+    "<strong> On peux observer au final une très faible corrélation entre le nombre de téléchargement d'un logiciel et sa note."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Split with SKlearn"
+    "## Création Split avec SKlearn"
    ]
   },
   {
@@ -1375,7 +1398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encore une fois, au vue du Coef et du graph, on a une fausse corrélation entre le nombre de téléchargement d'une application et la note d'une application."
+    "<strong> Encore une fois, au vue du Coef et du graph, on a une fausse corrélation entre le nombre de téléchargement d'une application et la note d'une application."
    ]
   },
   {
@@ -1538,7 +1561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alors effectivement, on peux observer une légère corrélation avec le fait que plus une application est légère, mieux elle sera noté car téléchargé certainement, mais elle reste faible"
+    "<strong> Alors effectivement, on peux observer une légère corrélation avec le fait que plus une application est légère, mieux elle sera noté car téléchargé certainement, mais elle reste faible"
    ]
   },
   {
@@ -1636,7 +1659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'idée étant de récuperer les 9 premiers éléments de mon tableau permettant de faire un barPlot lisible de la taille d'une application en fonction de son rating\n"
+    "<strong> L'idée étant de récuperer les 9 premiers éléments de mon tableau permettant de faire un barPlot lisible de la taille d'une application en fonction de son rating\n"
    ]
   },
   {
@@ -1867,7 +1890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<s"
+    "<strong> Malheureusement, tout les graphiques concordent sur la non corrélation entre la note d'une application et son nombre d'installation au total depuis le PlayStore Android. rien ne justifie l'autre et donc aucune corrélation s'applique."
    ]
   },
   {
